# events

./: .dockerignore  .env  .env.test  .gitignore  .test.env  Dockerfile  Readme.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml  deploy.yml
migration/: env.py
migration/versions/: 2025_10_20_0017-7d0fb8b3ca0b_create_tables.py
src/: baseclasses.py  config.py  constants.py  controllers.py  dependencies.py  exceptions.py  exeptions.py  main.py  rest.py  schemas.py  settings.py  structures.py  utils.py
src/api/: app.py
src/api/routers/: __init__.py  events.py  news.py  visitors.py
src/classes/: __init__.py  events_class.py  images_class.py  news_class.py  valid_tokens.py  visitors_class.py
src/controllers/: __init__.py  events.py  image.py  news.py  visitors.py
src/core/: constants.py  domain.py  exceptions.py  utils.py
src/database/: __init__.py  base.py  controls.py  crud.py  database.py  models.py  repository.py  session.py
src/database/models/: __init__.py  events.py  news_model.py  points_for_the_event_model.py  relationship_models.py
src/database/schemas/: __init__.py  events.py  events_responses.py  events_schemas.py  news_responses.py  news_schemas.py
src/database/services/: __init__.py  crud.py  crud_events.py  crud_news.py  crud_visitors.py  orm.py
src/db/: base.py  crud.py  models.py  session.py
src/errors/: __init__.py  errors.py  func_errors.py
src/interfaces/: __init__.py  crud_interface.py  event_interface.py  images_interface.py  news_interface.py  visitor_interface.py
src/migration/: env.py
src/migration/versions/: 2025_02_20_0035-e6099c624cea_add_table.py  2025_02_20_0616-e0a0378e0abe_changed_limit_people_value_int_to_str.py  2025_02_24_1244-e4b75f66ad30_add_tables.py  2025_02_24_1259-40eef4cf5cf3_add_new_column.py  2025_02_24_1917-2693e00fa066_replace_visitors_columns.py  2025_02_24_2118-5d9f82cf6a9d_add_tables.py  2025_02_25_1433-8eb9d0b494ab_add_tables.py  2025_02_25_1516-bff15c46e3d3_fix.py  2025_02_25_1912-d28e3abe3e62_fix.py  2025_02_26_1445-f3200ab7cefd_add_tables.py  2025_02_27_1543-882f63b69786_add_tables.py  2025_03_02_0247-04365f2364ae_add_tables.py  2025_03_22_1633-e5c85445dcda_add_tables.py  2025_03_29_1715-143b94ddbfb2_add_tables.py  2025_03_30_1909-057ee679471b_add_column_in_news.py  2025_04_02_1946-2f8ea9f198bb_add_tables.py  2025_04_08_1946-3bb2ca531f0a_add_tables.py  2025_04_10_1539-0620f363b01e_add_tables.py  2025_04_22_0229-ffeeafa7b554_add_tables.py  2025_04_27_1736-b06612ba831e_add_tables.py  2025_05_23_1913-5376867e700d_add_tables.py
src/responses/: bad_response.py  good_response.py
src/routers/: __init__.py  camera.py  event.py  events.py  events_routers.py  news.py  news_router.py  visitors.py  visitors_routers.py
src/services/: events.py  news.py  visitors.py
templates/: not_register.html  register.html
tests/: conftest.py  constant.py  fixtures.py  requests.py  test_api_v1_news.py  test_control_event.py  test_control_news.py  test_control_visitors.py  test_event.py  test_news.py  test_routes_events.py  test_routes_news.py  test_routes_visitors.py
tests/fixtures/: __init__.py  base.py  structures.py
