[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["AndrewMedvedev <andrejmedvedev2713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
asyncio = "^3.4.3"
aiohttp = "^3.11.12"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
ruff = "^0.9.7"
pypng = "^0.20220715.0"
sqlalchemy = "^2.0.40"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
pillow = "^11.2.1"
mypy = "^1.15.0"
coverage = "^7.9.1"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
exclude = [
    "__samples__",
    ".venv"
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=65",  
    "--no-cov-on-fail",    
    "-v",                 
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
parallel = true
omit = [
    "src/__init__.py",
    "src/*/__init__.py",
    "src/tests/*",
    "src/migrations/*",   

]


[tool.coverage.paths]
source = ["src"]
